update in thesis

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -104,7 +104,7 @@ Bengaluru. \vspace*{1em} \\
 \thispagestyle{empty}
 \newpage
 \begin{center}
-\includegraphics[scale=0.65]{AUText.png} \vspace*{1em}\\
+\includegraphics[scale=0.7]{AUText.png} \vspace*{2em}\\
 \textbf{CERTIFICATE}
 \end{center}
 This is to certify that \textbf{Mr. Ramkiran L. (17030141AE007), Mr. Manjunath (17030141AE009), Ms. Monisha Patel A. (17030141AE012)} and \textbf{Ms. Thoshitha R. Kumar (17030141AE027)} students of \textbf{Aerospace Engineering, Bachelor of Technology 2017-21} batch at \textbf{Alliance College of Engineering and Design (ACED), Alliance University, Bengaluru} has completed the project report titled \textit{\textbf{\enquote{Mechanics of Orbit using Python}}} under my guidance in partial fulfillment for the award of Bachelor of Technology degree in Aerospace Engineering, Alliance University, Bangalore during the year 2020-2021. \vspace{1em}\\
@@ -115,13 +115,13 @@ This is to certify that \textbf{Mr. Ramkiran L. (17030141AE007), Mr. Manjunath (
 Internal Guide & & Head of the Department \\ 
 Department of Aerospace Engineering & & Department of Aerospace Engineering \\
 ACED, Alliance University & & ACED, Alliance University \\ 
-Bengaluru & & Bengaluru \vspace{2em}\\ 
+Bengaluru & & Bengaluru \vspace{3em}\\ 
 \underline{\hspace{3cm}} & &  \\ 
 \textbf{Dr. Reeba Korah} & &  \\ \vspace{0.5em}
-Intrim Dean & &  \\ 
+Interim Dean & &  \\ 
 Department of Aerospace Engineering & & \\
 ACED, Alliance University & &  \\ 
-Bengaluru & &  \vspace{2em}\\ 
+Bengaluru & &  \vspace{3em}\\ 
 \end{tabular} 
 \end{center}
 \textbf{External Viva}
@@ -134,15 +134,45 @@ Bengaluru & &  \vspace{2em}\\
 \end{center}
 \thispagestyle{empty}
 \newpage
+\begin{center}
+\Large \textbf{DECLARATION}
+\end{center}
+\normalsize
+\hspace{4em}We, Ramkiran L, Manjunath, Monisha Patel A, Thoshitha R. Kumar students of 8\textsuperscript{th} Semester Bachelor of Technology in Aerospace Engineering, Alliance College of Engineering and Design (ACED), Alliance University, Bengaluru, hereby declare that the entire project work entitled \enquote{\textbf{Mechanics of Orbit using Python}} is an authentic record of the work that has been carried out independently by us during final year of our B.Tech at ACED, under the esteemed guidance \textbf{Dr. Gisa G.S}, Assistant Professor, Department of Aerospace Engineering, Alliance college of Engineering and Design, Alliance University.\\ \par
 
+This project report is submitted in partial fulfillment of requirements for the award of the degree of Bachelor of Technology in Aerospace Engineering. The results embodied in this dissertation are original and it has not been submitted in part or full for any degree in any University. \vspace{4em}\\
+\textbf{Place:} Bengaluru\\
+\textbf{Date:}17/062021 \vspace{5em}\\
 
+\begin{center}
+\begin{tabular}{K{7.5cm} K{7.5cm}}
+\underline{\hspace{2.5cm}} & \underline{\hspace{2.5cm}} \\ 
+\textbf{Ramkiran.L} & \textbf{Manjunath} \\ 
+\textbf{17030141AE007} & \textbf{17030141AE009} \vspace{3em}\\ 
+\underline{\hspace{3cm}} & \underline{\hspace{4cm}} \\ 
+\textbf{Monisha Patel A.} & \textbf{Thoshitha R. Kumar} \\ 
+\textbf{17030141AE012} & \textbf{17030141AE027}
+\end{tabular} 
+\end{center}
+\thispagestyle{empty}
+\newpage
+\begin{center}
+\Large \textbf{ACKNOWLEDGEMENT}
+\end{center}
+\normalsize
+\hspace{4em}The satisfaction that accompanies the successful completion of any task would be incomplete without the mention of the people, who are responsible for the completion of the project and who made it possible.\par
 
+We take this opportunity to thank our beloved Interim Dean Dr. Reeba Korah, ACED, Alliance University, Bangalore for providing excellent academic environment in the college and his never ending support to the B-Tech program.\par
 
+We would like to convey our sincere gratitude to Dr. K. Velmurugarajan, Head of Department of Aerospace Engineering, ACED, Alliance University, Bangalore for his support and encouragement given to carry out the project.\par
 
+We would like thank our internal guide Dr. Gisa G.S, Assistant Professor, Department of Aerospace Engineering, ACED, Alliance University, and Bangalore  \par
 
+We would also like to thank our college staff members and well-wishers who directly or indirectly helped, motivated to complete this project successfully. \par
 
-
-
+Lastly, we thank god almighty, our family, professors and friends for their constant encouragement without which this project would not have been possible.\\
+\thispagestyle{empty}
+\newpage
 
 
 
