cover page updated in thesis

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -116,12 +116,12 @@ Internal Guide & & Head of the Department \\
 Department of Aerospace Engineering & & Department of Aerospace Engineering \\
 ACED, Alliance University & & ACED, Alliance University \\ 
 Bengaluru & & Bengaluru \vspace{3em}\\ 
-\underline{\hspace{3cm}} & &  \\ 
-\textbf{Dr. Reeba Korah} & &  \\ \vspace{0.5em}
-Interim Dean & &  \\ 
-Department of Aerospace Engineering & & \\
-ACED, Alliance University & &  \\ 
-Bengaluru & &  \vspace{3em}\\ 
+\multicolumn{3}{c}{\underline{\hspace{3cm}}}\\ 
+\multicolumn{3}{c}{\textbf{Dr. Reeba Korah}}\vspace{1em} \\ 
+\multicolumn{3}{c}{Interim Dean} \\ 
+\multicolumn{3}{c}{Department of Aerospace Engineering}\\
+\multicolumn{3}{c}{ACED, Alliance University}\\ 
+\multicolumn{3}{c}{Bengaluru}\vspace{3em}\\ 
 \end{tabular} 
 \end{center}
 \textbf{External Viva}
