--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -121,14 +121,15 @@ Bengaluru & & Bengaluru \vspace{3em}\\
 \multicolumn{3}{c}{Interim Dean} \\ 
 \multicolumn{3}{c}{Department of Aerospace Engineering}\\
 \multicolumn{3}{c}{ACED, Alliance University}\\ 
-\multicolumn{3}{c}{Bengaluru}\vspace{3em}\\ 
+\multicolumn{3}{c}{Bengaluru}\vspace{2em}\\ 
 \end{tabular} 
 \end{center}
 \textbf{External Viva}
 \begin{center}
 \begin{tabular}{c K{7cm} K{7cm}}
  & \textbf{Name of Examiners} & \textbf{Signature with date} \\
-\textbf{1.} & & \\
+\textbf{1.} & & \\ 
+&&\\
 \textbf{2.} & & \\
 \end{tabular}
 \end{center}
@@ -138,7 +139,7 @@ Bengaluru & & Bengaluru \vspace{3em}\\
 \Large \textbf{DECLARATION}
 \end{center}
 \normalsize
-\hspace{4em}We, Ramkiran L, Manjunath, Monisha Patel A, Thoshitha R. Kumar students of 8\textsuperscript{th} Semester Bachelor of Technology in Aerospace Engineering, Alliance College of Engineering and Design (ACED), Alliance University, Bengaluru, hereby declare that the entire project work entitled \enquote{\textbf{Mechanics of Orbit using Python}} is an authentic record of the work that has been carried out independently by us during final year of our B.Tech at ACED, under the esteemed guidance \textbf{Dr. Gisa G.S}, Assistant Professor, Department of Aerospace Engineering, Alliance college of Engineering and Design, Alliance University.\\ \par
+\hspace{4em}We, Ramkiran L, Manjunath, Monisha Patel A, Thoshitha R. Kumar students of 8\textsuperscript{th} Semester Bachelor of Technology in Aerospace Engineering, Alliance College of Engineering and Design (ACED), Alliance University, Bengaluru, hereby declare that the entire project work entitled \enquote{\textbf{Mechanics of Orbit using Python}} is an authentic record of the work that has been carried out independently by us during final year of our B.Tech at ACED, under the esteemed guidance \textbf{Dr. Gisa G.S}, Assistant Professor, Department of Aerospace Engineering, Alliance college of Engineering and Design, Alliance University. \par
 
 This project report is submitted in partial fulfillment of requirements for the award of the degree of Bachelor of Technology in Aerospace Engineering. The results embodied in this dissertation are original and it has not been submitted in part or full for any degree in any University. \vspace{4em}\\
 \textbf{Place:} Bengaluru\\
