--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -195,31 +195,31 @@ Mechanics of Orbit using Python(MOPy) is learning tool designed and developed wi
 \begin{center}
 \begin{table}[H]
 {\rowcolors{2}{white}{gray!50}
-\begin{tabular}{K{7.5cm} K{3cm} K{3cm}}
+\begin{tabular}{c|K{7.5cm}}
 \hline 
-\textbf{Section} & \textbf{Back-End Implementation} & \textbf{Front-End Implementation} \\ 
+Sl. No & \textbf{Section}\\ 
 \hline 
-Calculation of Orbital Elements & Yes & Yes \\ 
+1 & Calculation of Orbital Elements\\ 
 \hline 
-2D and 3D orbit & Yes & No \\ 
+2 & 2D and 3D orbit \\ 
 \hline 
-Various Parameters at any given point & Yes & Yes \\ 
+3 & Various Parameters at any given point \\ 
 \hline 
-2D and 3D Orbits & Partially & Yes \\ 
+4 & 2D and 3D Orbits\\ 
 \hline 
-Calculation of Julian Day & Yes & Yes \\ 
+5 & Calculation of Julian Day \\ 
 \hline 
-Euler Angles & Partially & No \\ 
+5 & Euler Angles\\ 
 \hline 
-Sphere Of Influence & Yes & Yes \\ 
+6 & Sphere Of Influence \\ 
 \hline 
-Sensitivity Analysis & Yes & No \\ 
+7 & Sensitivity Analysis \\ 
 \hline 
-Position of one Spacecraft w.r.t Another & Yes & No \\ 
+8 & Position of one Spacecraft w.r.t Another\\ 
 \hline 
-Calculation of State and Velocity Vector & Yes & No \\ 
+9 & Calculation of State and Velocity Vector\\ 
 \hline
-Orbital Transfer & Partially & No \\ 
+10 & Orbital Transfer  \\ 
 \hline
 \end{tabular}}
 \caption{\label{tab: features}List of Features present in MOPy}
