--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt]{article}
-\usepackage{times}
+\usepackage{newtxtext}
+\usepackage[T1]{fontenc}
 \usepackage{etoolbox}
 
 \makeatletter
@@ -78,26 +79,27 @@
 \normalsize Submitted by: \vspace*{1em} \\
 \normalsize
 \begin{tabular}{cc}
-Ramkiran L. & Manjunath \\ 
+\textbf{Ramkiran L.} & \textbf{Manjunath} \\ 
 17030141AE007 & 17030141AE009 \\ 
-\href{mailto:lramkiranBTECH17@ced.alliance.edu.in}{{\color{blue}{\fontfamily{ptm}\selectfont
-lramkiranBTECH17@ced.alliance.edu.in}}} & \href{mailto:manjunathBTECH17@ced.alliance.edu.in}{{\color{blue}{\fontfamily{ptm}\selectfont
+{{{\fontfamily{ptm}\selectfont
+lramkiranBTECH17@ced.alliance.edu.in}}} & {{{\fontfamily{ptm}\selectfont
 manjunathBTECH17@ced.alliance.edu.in}}} \vspace*{1em} \\ 
-Monisha Patel A. & Thoshitha R. Kumar \\ 
+\textbf{Monisha Patel A.} & \textbf{Thoshitha R. Kumar} \\ 
 17030141AE013 & 17030141AE027 \\ 
-\href{mailto:pamonishaBTECH17@ced.alliance.edu.in}{{\color{blue}{\fontfamily{ptm}\selectfont
-pamonishaBTECH17@ced.alliance.edu.in}}} & \href{mailto:kuthoshithaBTECH17@ced.alliance.edu.in}{{\color{blue}{\fontfamily{ptm}\selectfont
+{{{\fontfamily{ptm}\selectfont
+pamonishaBTECH17@ced.alliance.edu.in}}} & {{{\fontfamily{ptm}\selectfont
 kuthoshithaBTECH17@ced.alliance.edu.in}}} \vspace*{1em} \\ 
 \end{tabular} 
 \normalsize
 Under the guidance of\\
-\textbf{Dr. Gisa G.S.} \\
-Assistant Professor\\
-Department of Aerospace Engineering,\\
-Alliance College of Engineering and Design,\\
-Alliance University\\
-Bengaluru. \vspace*{1em} \\
-
+\begin{tabular}{cc}
+\textbf{Prof. Gisa G.S.} & \textbf{Prof. Yadu Krishnan} \\
+Assistant Professor & Assistant Professor \\
+Department of Aerospace Engineering,& Department of Aerospace Engineering,\\
+Alliance College of Engineering and Design, & Alliance College of Engineering and Design,\\
+Alliance University & Alliance University\\
+Bengaluru. & Bengaluru. \vspace*{1em} \\
+\end{tabular}
 \textbf{Department of Aerospace Engineering}\\
 \textbf{Alliance College of Engineering and Design}\\
 \textbf{Alliance University, Bengaluru - 562106} \\
@@ -113,18 +115,18 @@ Bengaluru. \vspace*{1em} \\
 This is to certify that \textbf{Mr. Ramkiran L. (17030141AE007), Mr. Manjunath (17030141AE009), Ms. Monisha Patel A. (17030141AE012)} and \textbf{Ms. Thoshitha R. Kumar (17030141AE027)} students of \textbf{Aerospace Engineering, Bachelor of Technology 2017-21} batch at \textbf{Alliance College of Engineering and Design (ACED), Alliance University, Bengaluru} has completed the project report titled \textit{\textbf{\enquote{Mechanics of Orbit using Python}}} under my guidance in partial fulfillment for the award of Bachelor of Technology degree in Aerospace Engineering, Alliance University, Bangalore during the year 2020-2021. \vspace{1em}\\
 \begin{center}
 \begin{tabular}{K{7cm} K{0.5cm} K{7cm}}
-\underline{\hspace{2.5cm}} & & \underline{\hspace{4cm}} \\ 
-\textbf{Prof. Gisa G.S} & & \textbf{Prof. Velmurugarajan K.} \vspace{1em}\\ 
-Internal Guide & & Head of the Department \\ 
+\underline{\hspace{2.9cm}} & & \underline{\hspace{4.3cm}} \\ 
+\textbf{Prof. Gisa G.S} & & \textbf{Prof. Yadu Krishnan} \vspace{1em}\\ 
+Internal Guide & &  Internal Guide\\ 
 Department of Aerospace Engineering & & Department of Aerospace Engineering \\
 ACED, Alliance University & & ACED, Alliance University \\ 
 Bengaluru & & Bengaluru \vspace{3em}\\ 
-\multicolumn{3}{c}{\underline{\hspace{3cm}}}\\ 
-\multicolumn{3}{c}{\textbf{Dr. Reeba Korah}}\vspace{1em} \\ 
-\multicolumn{3}{c}{Interim Dean} \\ 
-\multicolumn{3}{c}{Department of Aerospace Engineering}\\
-\multicolumn{3}{c}{ACED, Alliance University}\\ 
-\multicolumn{3}{c}{Bengaluru}\vspace{2em}\\ 
+\underline{\hspace{5cm}}&&\underline{\hspace{3.5cm}}\\ 
+\textbf{Prof. Velmurugarajan K.}&&\textbf{Dr. Reeba Korah}\vspace{1em} \\ 
+Head of the Department&&Interim Dean \\ 
+Department of Aerospace Engineering&&Department of Aerospace Engineering\\
+ACED, Alliance University&&ACED, Alliance University\\ 
+Bengaluru&&Bengaluru\vspace{2em}\\ 
 \end{tabular} 
 \end{center}
 \textbf{External Viva}
